--- a/HackFSU/Base.lproj/Main.storyboard
+++ b/HackFSU/Base.lproj/Main.storyboard
@@ -15,6 +15,7 @@
     <customFonts key="customFonts">
         <array key="AvenirNext.ttc">
             <string>AvenirNext-Bold</string>
+            <string>AvenirNext-BoldItalic</string>
             <string>AvenirNext-Medium</string>
             <string>AvenirNext-Regular</string>
         </array>
@@ -66,7 +67,7 @@
             <objects>
                 <viewController id="INT-lU-VUl" customClass="InfoViewController" customModule="HackFSU" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eiM-5O-bIu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="InfoPageSidebarWShadow" translatesAutoresizingMaskIntoConstraints="NO" id="TS3-ke-0kZ">
@@ -101,7 +102,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uS7-aB-SuG">
-                                <rect key="frame" x="0.0" y="250" width="375" height="750"/>
+                                <rect key="frame" x="0.0" y="250" width="375" height="562"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=" Date &amp; Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWH-T3-ZZa">
                                         <rect key="frame" x="16" y="22" width="343" height="23"/>
@@ -187,52 +188,65 @@
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VHU-La-G6z">
-                                <rect key="frame" x="0.0" y="250" width="375" height="750"/>
+                                <rect key="frame" x="0.0" y="250" width="375" height="562"/>
                                 <subviews>
-                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VL4-Xf-21A">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="750"/>
-                                        <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diracFloor1" translatesAutoresizingMaskIntoConstraints="NO" id="h7b-03-NyZ">
-                                                <rect key="frame" x="8" y="8" width="359" height="217"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="217" id="5Se-gM-EzU"/>
-                                                </constraints>
-                                            </imageView>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diracFloor2" translatesAutoresizingMaskIntoConstraints="NO" id="ijC-Jm-jhq">
-                                                <rect key="frame" x="8" y="233" width="359" height="217"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="217" id="PAR-jC-jbK"/>
-                                                </constraints>
-                                            </imageView>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diracFloor3" translatesAutoresizingMaskIntoConstraints="NO" id="WOF-QE-8jq">
-                                                <rect key="frame" x="8" y="458" width="359" height="217"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="217" id="TdS-K1-w0G"/>
-                                                </constraints>
-                                            </imageView>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="h7b-03-NyZ" firstAttribute="trailing" secondItem="VL4-Xf-21A" secondAttribute="trailingMargin" id="1Mq-YE-Z8N"/>
-                                            <constraint firstItem="WOF-QE-8jq" firstAttribute="top" secondItem="ijC-Jm-jhq" secondAttribute="bottom" constant="8" symbolic="YES" id="Fgf-Tt-TiL"/>
-                                            <constraint firstItem="ijC-Jm-jhq" firstAttribute="trailing" secondItem="WOF-QE-8jq" secondAttribute="trailing" id="HLy-Ow-ZYM"/>
-                                            <constraint firstItem="h7b-03-NyZ" firstAttribute="leading" secondItem="ijC-Jm-jhq" secondAttribute="leading" id="RkO-Ln-kjT"/>
-                                            <constraint firstAttribute="bottom" secondItem="WOF-QE-8jq" secondAttribute="bottom" constant="75" id="SR7-2D-aAN"/>
-                                            <constraint firstItem="h7b-03-NyZ" firstAttribute="centerX" secondItem="VL4-Xf-21A" secondAttribute="centerX" id="Z7T-bj-3Jw"/>
-                                            <constraint firstItem="h7b-03-NyZ" firstAttribute="top" secondItem="VL4-Xf-21A" secondAttribute="topMargin" id="cN4-xd-lC7"/>
-                                            <constraint firstItem="h7b-03-NyZ" firstAttribute="trailing" secondItem="ijC-Jm-jhq" secondAttribute="trailing" id="gLU-0R-SJ4"/>
-                                            <constraint firstItem="h7b-03-NyZ" firstAttribute="leading" secondItem="VL4-Xf-21A" secondAttribute="leadingMargin" id="hMh-Ca-9MR"/>
-                                            <constraint firstItem="ijC-Jm-jhq" firstAttribute="top" secondItem="h7b-03-NyZ" secondAttribute="bottom" constant="8" symbolic="YES" id="mos-Of-VsG"/>
-                                            <constraint firstItem="ijC-Jm-jhq" firstAttribute="leading" secondItem="WOF-QE-8jq" secondAttribute="leading" id="thW-fj-vif"/>
-                                        </constraints>
-                                    </scrollView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Level" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l9j-D2-1MB">
+                                        <rect key="frame" x="17" y="22" width="44" height="24"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-BoldItalic" family="Avenir Next" pointSize="17"/>
+                                        <color key="textColor" red="0.59987986090000001" green="0.1231800988" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vYS-qA-qct">
+                                        <rect key="frame" x="218" y="20" width="58" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-BoldItalic" family="Avenir Next" pointSize="14"/>
+                                        <state key="normal" title="THREE">
+                                            <color key="titleColor" red="0.54074230209999996" green="0.1939292239" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="clickedNewLevel:" destination="INT-lU-VUl" eventType="touchUpInside" id="nya-bE-nh9"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CLq-cn-oaF">
+                                        <rect key="frame" x="287" y="20" width="59" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-BoldItalic" family="Avenir Next" pointSize="14"/>
+                                        <state key="normal" title="FOUR">
+                                            <color key="titleColor" red="0.54074230209999996" green="0.1939292239" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="clickedNewLevel:" destination="INT-lU-VUl" eventType="touchUpInside" id="qQV-go-jpu"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Huc-3M-sPg">
+                                        <rect key="frame" x="148" y="20" width="60" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-BoldItalic" family="Avenir Next" pointSize="14"/>
+                                        <state key="normal" title="TWO">
+                                            <color key="titleColor" red="0.54074230209999996" green="0.1939292239" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="clickedNewLevel:" destination="INT-lU-VUl" eventType="touchUpInside" id="3x4-ze-mNs"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aAL-kO-1O6">
+                                        <rect key="frame" x="80" y="20" width="58" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-BoldItalic" family="Avenir Next" pointSize="14"/>
+                                        <state key="normal" title="ONE">
+                                            <color key="titleColor" red="0.54074230209999996" green="0.1939292239" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="clickedNewLevel:" destination="INT-lU-VUl" eventType="touchUpInside" id="fmM-yk-qer"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="diracFloor1" translatesAutoresizingMaskIntoConstraints="NO" id="O56-5T-2Pl">
+                                        <rect key="frame" x="8" y="76" width="359" height="223"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96851021049999997" green="0.96861487629999998" blue="0.97259420159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="VL4-Xf-21A" secondAttribute="trailing" id="Ahm-jz-ymg"/>
-                                    <constraint firstAttribute="bottom" secondItem="VL4-Xf-21A" secondAttribute="bottom" id="O8s-1a-WMh"/>
-                                    <constraint firstItem="VL4-Xf-21A" firstAttribute="top" secondItem="VHU-La-G6z" secondAttribute="top" id="dfZ-58-21r"/>
-                                    <constraint firstItem="VL4-Xf-21A" firstAttribute="leading" secondItem="VHU-La-G6z" secondAttribute="leading" id="h2H-Df-bdM"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.54074230209999996" green="0.1939292239" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -260,12 +274,15 @@
                         <viewLayoutGuide key="safeArea" id="4ei-JX-RLs"/>
                     </view>
                     <navigationItem key="navigationItem" title="Info" id="pES-Xx-fhu"/>
-                    <size key="freeformSize" width="375" height="1000"/>
                     <connections>
                         <outlet property="aboutButton" destination="H3o-jZ-QKG" id="fr8-f3-4nJ"/>
+                        <outlet property="firstFloorButton" destination="aAL-kO-1O6" id="0sq-kj-4sw"/>
+                        <outlet property="fourthFloorButton" destination="CLq-cn-oaF" id="cgJ-dy-vsw"/>
                         <outlet property="mapButton" destination="2aX-Ns-XcP" id="848-hp-WP8"/>
-                        <outlet property="mapScrollView" destination="VL4-Xf-21A" id="D7E-dF-edr"/>
+                        <outlet property="mapDisplayImage" destination="O56-5T-2Pl" id="UqO-qL-PcU"/>
                         <outlet property="mapView" destination="VHU-La-G6z" id="40t-Dz-vCV"/>
+                        <outlet property="secondFloorButton" destination="Huc-3M-sPg" id="OMl-da-Tle"/>
+                        <outlet property="thirdFloorButton" destination="vYS-qA-qct" id="mYW-U0-vnC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e6u-8c-3sY" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -982,8 +999,6 @@
         <image name="InfoPageSidebarWShadow" width="1831" height="548"/>
         <image name="ThursdayCirclePink" width="158" height="158"/>
         <image name="diracFloor1" width="700" height="453"/>
-        <image name="diracFloor2" width="700" height="419"/>
-        <image name="diracFloor3" width="700" height="438"/>
         <image name="gear-7" width="30" height="30"/>
         <image name="lineColorImage" width="3000" height="3000"/>
         <image name="list-simple-7" width="30" height="30"/>
